--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
+
 {
   "name": "acesian-drafter",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
     "read-excel-file": "^5.7.1",
-    "@google/genai": "^0.1.0",
-    "tailwindcss": "^3.4.1"
+    "@google/genai": "latest",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^4.9.5",
+    "@types/node": "^16.18.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
