refactor: Update project dependencies and config
Upgrades dependencies to latest stable versions and updates Vite configuration.
Removes unused `read-excel-file` and AI-related imports/code.
Adjusts Vite's import maps and environment variable handling for API keys.
Updates the lock screen component to simplify its logic and remove unnecessary state.
Renames the project package name from "acesian-drafter" to "acesian-auto-drafter".

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
-
 {
-  "name": "acesian-drafter",
-  "version": "1.0.0",
+  "name": "acesian-auto-drafter",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,18 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "read-excel-file": "^5.7.1"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
