--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@google/genai": "^0.1.1",
+    "@google/generative-ai": "latest",
     "read-excel-file": "^5.7.1"
   },
   "devDependencies": {
